--- a/index.html
+++ b/index.html
@@ -126,6 +126,18 @@
                     </ul>
                     <a href="http://softvanlabs.com/" class="btn btn-primary btn-retro">Softvan</a>
                 </div>
+                 <div class="experience-card">
+                    <h3>Software Development Intern</h3>
+                    <p class="company">Sofvan Pvt Ltd, Ahmedabad</p>
+                    <p class="date">March 2022 - June 2022</p>
+                    <ul>
+                        <li>Developed & deployed 10+ APIs using J2EE & Spring framework</li>
+                        <li>Improved data flow efficiency by 15%</li>
+                        <li>Engineered a voice-integrated system using serverless architecture on AWS</li>
+                        <li>Reduced operational costs by 25%</li>
+                    </ul>
+                    <a href="http://softvanlabs.com/" class="btn btn-primary btn-retro">Softvan</a>
+                </div>
             </div>
         </section>
 
@@ -283,6 +295,7 @@
                     <h3>MS in Data Science</h3>
                     <p class="institution">University of Maryland, College Park</p>
                     <p class="date">2026 (Expected)</p>
+                    <p class="grade">GPA: 3.77/4.00</p>
                     <a href="https://umd.edu/" class="btn btn-info btn-interactive">University Website</a>
                 </div>
                 <div class="education-card">
