--- a/index.html
+++ b/index.html
@@ -127,14 +127,13 @@
                     <a href="http://softvanlabs.com/" class="btn btn-primary btn-retro">Softvan</a>
                 </div>
                  <div class="experience-card">
-                    <h3>Software Development Intern</h3>
-                    <p class="company">Sofvan Pvt Ltd, Ahmedabad</p>
-                    <p class="date">March 2022 - June 2022</p>
+                    <h3>Marketing and Sales</h3>
+                    <p class="company">Krishna Agency, Ahmedabad</p>
+                    <p class="date">March 2023 - December 2023</p>
                     <ul>
-                        <li>Developed & deployed 10+ APIs using J2EE & Spring framework</li>
-                        <li>Improved data flow efficiency by 15%</li>
-                        <li>Engineered a voice-integrated system using serverless architecture on AWS</li>
-                        <li>Reduced operational costs by 25%</li>
+                        <li>Expanded the firm's reach from local to interstate markets, significantly enhancing market presence and client base.</li>
+                        <li>optimized pricing models, while ensuring strong profit margins and upholding product quality.</li>
+                        <li>Led efforts to achieve a 12% sales increase </li>
                     </ul>
                     <a href="http://softvanlabs.com/" class="btn btn-primary btn-retro">Softvan</a>
                 </div>
