--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         <li>optimized pricing models, while ensuring strong profit margins and upholding product quality.</li>
                         <li>Led efforts to achieve a 12% sales increase </li>
                     </ul>
-                    <a href="http://softvanlabs.com/" class="btn btn-primary btn-retro">Softvan</a>
+                    <a href="404" class="btn btn-primary btn-retro">Krishna Agency</a>
                 </div>
             </div>
         </section>
