--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <li><a href="#experience" class="nav-link">Experience</a></li>
                 <li><a href="#projects" class="nav-link">Projects</a></li>
                 <li><a href="#research" class="nav-link">Research</a></li>
-                <li><a href="#skills" class="nav-link">Skills</a></li>
+                <li><a href="#skills-section" class="nav-link">Skills</a></li>
                 <li><a href="#education" class="nav-link">Education</a></li>
             </ul>
             <div class="theme-switch-wrapper">
@@ -37,17 +37,6 @@
             <div class="hero-content">
                 <h1 id="typing-text"></h1>
                 <p id="subtitle-text" class="subtitle"></p>
-                <div class="social-links">
-                    <a href="https://www.linkedin.com/in/premal-shah-94912b252/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"></path><rect x="2" y="9" width="4" height="12"></rect><circle cx="4" cy="4" r="2"></circle></svg>
-                    </a>
-                    <a href="mailto:premalshah204@gmail.com" aria-label="Email">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path><polyline points="22,6 12,13 2,6"></polyline></svg>
-                    </a>
-                    <a href="https://github.com/premalshah999" target="_blank" rel="noopener noreferrer" aria-label="GitHub">
-                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 19c-5 1.5-5-2.5-7-3m14 6v-3.87a3.37 3.37 0 0 0-.94-2.61c3.14-.35 6.44-1.54 6.44-7A5.44 5.44 0 0 0 20 4.77 5.07 5.07 0 0 0 19.91 1S18.73.65 16 2.48a13.38 13.38 0 0 0-7 0C6.27.65 5.09 1 5.09 1A5.07 5.07 0 0 0 5 4.77a5.44 5.44 0 0 0-1.5 3.78c0 5.42 3.3 6.61 6.44 7A3.37 3.37 0 0 0 9 18.13V22"></path></svg>
-                    </a>
-                </div>
                 <div class="cta-buttons">
                     <a href="https://drive.google.com/file/d/1b8GByVB4yxsXHZuhicokz5EkcPOmXQc2/view?usp=sharing" target="_blank" rel="noopener noreferrer" class="btn btn-primary" id="download-cv">
                         Download CV
@@ -56,6 +45,20 @@
                         More About Me
                     </a>
                 </div>
+            </div>
+            <img src="premal.png" alt="Premal Shah" class="hero-image" />
+            
+            <!-- New vertical navigation bar -->
+            <div class="vertical-nav">
+                <a href="https://www.linkedin.com/in/premal-shah-94912b252/" target="_blank" rel="noopener noreferrer" aria-label="LinkedIn" class="nav-link linkedin">
+                    <img src="https://cdn-icons-png.flaticon.com/512/174/174857.png" alt="LinkedIn" class="nav-icon"> LinkedIn
+                </a>
+                <a href="mailto:premalshah204@gmail.com" aria-label="Email" class="nav-link email">
+                    <img src="https://cdn-icons-png.flaticon.com/512/732/732200.png" alt="Email" class="nav-icon"> Email
+                </a>
+                <a href="https://github.com/premalshah999" target="_blank" rel="noopener noreferrer" aria-label="GitHub" class="nav-link github">
+                    <img src="https://cdn-icons-png.flaticon.com/512/25/25231.png" alt="GitHub" class="nav-icon"> GitHub
+                </a>
             </div>
         </section>
 
@@ -67,7 +70,7 @@
                     <p>Currently pursuing my MS in Data Science at the University of Maryland, I'm constantly expanding my knowledge and skills to stay at the forefront of technological advancements. My goal is to leverage data-driven insights to solve complex real-world problems and contribute to a more sustainable and efficient future.</p>
                 </div>
                 <div class="quote-container">
-                    <div id="quote3d">VENI VIDI VICI</div>
+                    <div id="quote3d">CREATE EXPLORE EXPAND CONQUER</div>
                 </div>
             </div>
         </section>
@@ -77,10 +80,10 @@
             <div class="contact-container">
                 <div class="contact-info">
                     <h3>Get in Touch</h3>
-                    <p class="email">Email: <a href="mailto:premalshah204@gmail.com">premalshah204@gmail.com</a></p>
+                    <p class="Email">Email: <a href="mailto:premalshah204@gmail.com">premalshah204@gmail.com</a></p>
                     <p class="phone">Phone: <a href="tel:+12405013450">+1 240 501 3450</a></p>
                 </div>
-                <form id="contact-form" class="contact-form">
+                <form id="contact-form" class="contact-form" onsubmit="sendEmail(event)">
                     <input type="text" name="name" placeholder="Your Name" required>
                     <input type="email" name="email" placeholder="Your Email" required>
                     <textarea name="message" placeholder="Your Message" required></textarea>
@@ -147,25 +150,25 @@
                     <img src="https://images.unsplash.com/photo-1560493676-04071c5f467b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1074&q=80" alt="Project DAWN">
                     <h3>Project DAWN</h3>
                     <p>NSF-funded predictive analytics for agriculture</p>
-                    <button class="project-details-btn">View Details</button>
+                    <button class="btn btn-primary project-details-btn">View Details</button>
                 </div>
                 <div class="project-card" data-project="energy">
                     <img src="https://images.unsplash.com/photo-1473341304170-971dccb5ac1e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="EnergyDemand Forecasting">
                     <h3>EnergyDemand Forecasting</h3>
                     <p>AI-powered electricity price prediction</p>
-                    <button class="project-details-btn">View Details</button>
+                    <button class="btn btn-primary project-details-btn">View Details</button>
                 </div>
                 <div class="project-card" data-project="hr">
                     <img src="https://images.unsplash.com/photo-1554774853-aae0a22c8aa4?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1470&q=80" alt="HR Automation">
                     <h3>HR Automation</h3>
                     <p>AI-powered automated resume parsing & candidate selection</p>
-                    <button class="project-details-btn">View Details</button>
+                    <button class="btn btn-primary project-details-btn">View Details</button>
                 </div>
                 <div class="project-card" data-project="code">
                     <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1469&q=80" alt="Source Code Generation">
                     <h3>Source Code Generation</h3>
                     <p>Automated source code generation for Spring Boot projects</p>
-                    <button class="project-details-btn">View Details</button>
+                    <button class="btn btn-primary project-details-btn">View Details</button>
                 </div>
             </div>
         </section>
